syntax = "proto3";
package union.ibc.lightclients.ethereum.v1;

option go_package = "union/ibc/lightclients/ethereum";
import "ibc/core/client/v1/client.proto";
import "ibc/lightclients/tendermint/v1/tendermint.proto";

message StorageProof {
  repeated Proof proofs = 1;
}

// Value returned by eth_getProof
message Proof {
  // NOTE: U256
  bytes key = 1;
  // NOTE: U256
  bytes value = 2;
  repeated bytes proof = 3;
}

message AccountProof {
  // NOTE: 20 bytes
  bytes contract_address = 1;
  // NOTE: H256
  // NOTE: eth_getProof.storageHash
  bytes storage_root = 2;
  // NOTE: eth_getProof.accountProof
  repeated bytes proof = 3;
}

message ClientState {
  string chain_id = 1;
  bytes genesis_validators_root = 2;
  uint64 min_sync_committee_participants = 3;
  uint64 genesis_time = 4;
  ForkParameters fork_parameters = 5;
  uint64 seconds_per_slot = 6;
  uint64 slots_per_epoch = 7;
  uint64 epochs_per_sync_committee_period = 8;
  .ibc.lightclients.tendermint.v1.Fraction trust_level = 9;
  uint64 trusting_period = 10;
  uint64 latest_slot = 11;
  .ibc.core.client.v1.Height frozen_height = 12;
  bytes counterparty_commitment_slot = 13;
  bytes ibc_contract_address = 14;
}


message ConsensusState {
  uint64 slot = 1;
  bytes state_root = 2;
  bytes storage_root = 3;
  // FIXME: isn't it already defined in ibc.lightclients.wasm.v1?
  uint64 timestamp = 4;
  bytes current_sync_committee = 5;
  bytes next_sync_committee = 6;
}

// TODO: This should be an enum containing either sync committee update or finality update.
message Header {
  TrustedSyncCommittee trusted_sync_committee = 1;
  LightClientUpdate consensus_update = 2;
  AccountUpdate account_update = 3;
}

message TrustedSyncCommittee {
  .ibc.core.client.v1.Height trusted_height = 1;
  SyncCommittee current_sync_committee = 2;
  SyncCommittee next_sync_committee = 3;
}

message ForkParameters {
  bytes genesis_fork_version = 1;
  uint64 genesis_slot = 2;

  Fork altair = 3;
  Fork bellatrix = 4;
  Fork capella = 5;
  Fork deneb = 6;
}

message Fork {
  bytes version = 1;
  uint64 epoch = 2;
}

message LightClientUpdate {
  LightClientHeader attested_header = 1;
  SyncCommittee next_sync_committee = 2;
  repeated bytes next_sync_committee_branch = 3;
  LightClientHeader finalized_header = 4;
  repeated bytes finality_branch = 5;
  SyncAggregate sync_aggregate = 8;
  uint64 signature_slot = 9;
}

message SyncCommittee {
  repeated bytes pubkeys = 1;
  bytes aggregate_pubkey = 2;
}

message SyncAggregate {
  bytes sync_committee_bits = 1;
  bytes sync_committee_signature = 2;
}

message ExecutionUpdate {
  bytes state_root = 1;
  repeated bytes state_root_branch = 2;
  uint64 block_number = 3;
  repeated bytes block_number_branch = 4;
}

message AccountUpdate {
  AccountProof account_proof = 1;
}

message LightClientHeader {
  BeaconBlockHeader beacon = 1;
  ExecutionPayloadHeader execution = 2;
  repeated bytes execution_branch = 3;
}

message ExecutionPayloadHeader {
  bytes parent_hash = 1;
  bytes fee_recipient = 2;
  bytes state_root = 3;
  bytes receipts_root = 4;
  bytes logs_bloom = 5;
  bytes prev_randao = 6;
  uint64 block_number = 7;
  uint64 gas_limit = 8;
  uint64 gas_used = 9;
  uint64 timestamp = 10;
  bytes extra_data = 11;
  // TODO(aeryz): U256
  bytes base_fee_per_gas = 12;
  bytes block_hash = 13;
  bytes transactions_root = 14;
  bytes withdrawals_root = 15;
  uint64 blob_gas_used = 16;
  uint64 excess_blob_gas = 17;
}

message BeaconBlockHeader {
  uint64 slot = 1;
  uint64 proposer_index = 2;
  bytes parent_root = 3;
  bytes state_root = 4;
  bytes body_root = 5;
}

message FinalizedHeaderMisbehaviour {
  string client_id = 1;
  TrustedSyncCommittee trusted_sync_committee = 2;
  LightClientUpdate consensus_update_1 = 3;
  LightClientUpdate consensus_update_2 = 4;
}

message NextSyncCommitteeMisbehaviour {
  string client_id = 1;
  TrustedSyncCommittee trusted_sync_committee = 2;
  LightClientUpdate consensus_update_1 = 3;
  LightClientUpdate consensus_update_2 = 4;
}

